adding test files for configuration

--- a/libdone/Makefile
+++ b/libdone/Makefile
@@ -11,6 +11,7 @@ endif
 
 # Folders
 SRCDIR := src
+SRCTESTDIR := test
 BUILDDIR := build
 TARGETDIR := bin
 
@@ -30,11 +31,25 @@ INCDIRS := $(shell find include -name '*.h' -exec dirname {} \; | sort | uniq)
 INCLIST := $(patsubst include/%,-I include/%,$(INCDIRS))
 BUILDLIST := $(patsubst include/%,$(BUILDDIR)/%,$(INCDIRS))
 
+
+
 CFLAGS := -c
 INC := -I $(INCLIST) -I /usr/local/include
 LIB := -L /usr/local/lib
 
 CFLAGS += -std=c++11 -stdlib=libc++ -O2
+UNITTEST := -lcppunit
+# Test flags
+CTESTFLAGS := -Wl,--no-as-needed $(UNITTEST) $(CFLAGS)
+LIBTEST := $(UNITTEST) $(LIB)
+
+TESTSOURCES := $(shell find $(SRCTESTDIR) -type f -name *.$(SRCEXT))
+TESTOBJECTS := $(patsubst $(SRCTESTDIR)/%,$(BUILDDIR)/%,$(TESTSOURCES:.$(SRCEXT)=.o.test))
+TESTOBJECTS += $(filter-out build/main.o, $(OBJECTS))
+
+TESTINCDIRS := $(shell find test -name '*.h' -exec dirname {} \; | sort | uniq)
+TESTINCLIST := $(patsubst test/%,-I test/%,$(TESTINCDIRS))
+TESTINC := $(INC) -I test #$(TESTINCLIST)
 
 $(TARGET): $(OBJECTS)
 	@mkdir -p $(TARGETDIR)
@@ -47,6 +62,14 @@ $(BUILDDIR)/%.o: $(SRCDIR)/%.$(SRCEXT)
 	@echo "$(CC) $(CFLAGS) $(INC) -c -o $@ $<"
 	@echo "Compiling $<..."; $(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
+$(BUILDDIR)/%.o.test: $(SRCTESTDIR)/%.$(SRCEXT)
+	@mkdir -p $(BUILDDIR)
+	@echo "$(CC) $(CTESTFLAGS) $(TESTINC) -c -o $@ $<"
+	@echo "Compiling $<..."; $(CC) $(CFLAGS) $(TESTINC) -c -o $@ $<
+
+test: $(TESTOBJECTS)
+	@echo "$(CC) $^ -o $(TARGET).test $(LIB)"
+	@echo "  Linking $(TARGET).test"; $(CC) $^ -o $(TARGET).test $(LIBTEST)
 
 clean:
 	@echo "Cleaning $(TARGET)..."; $(RM) -r $(BUILDDIR) $(TARGET)
